<resources>
    <string name="app_name" >My File Manager</string>
    <string name="eula_text">Phong</string>
    <string name="accept_eula">accept_eula</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="up_to_8_characters">Up to 8 characters</string>
    <string name="btn_cleantask">Clean tasks</string>
    <string name="task_msg">Do you want clean it?</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_kill">Start</string>
    <string name="version">version:</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="properties">Property</string>
    <string name="share">Share</string>
    <string name="remove">Remove</string>
    <string name="haven_t_found_any_danger_yet">Haven\'t found any danger yet.</string>
    <string name="resolve_problems">Resolve Problems</string>
    <string name="scaned_text">Scanned</string>
    <string name="menacesText">Problems</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="app_ver">VersionAPP</string>
    <string name="follow">Follow me</string>
    <string name="paste">paste</string>
    <string name="permanently_delete">Permanently delete</string>
    <string name="restore_original_file">Restore original file</string>
    <string name="installedGPlay_message">Installing apps from unknown sources can lead to malware. Go to Settings&gt;Security and then disable Unknown Sources.</string>
    <string name="tab1">Boost</string>
    <string name="tab2">Clean</string>
    <string name="tab3">Antivirus</string>
    <string name="fileexplozer">File Explorer</string>
    <string name="read_more">Read more about our Privacy Policy.</string>
    <string name="trust">Trust</string>
    <string name="trusted_by_user">Medium Risk</string>
    <string name="video">Video</string>
    <string name="recent_unused_app">Is loading...</string>
    <string name="large_files">Large Files</string>
    <string name="feedback">Feedback</string>
    <string name="more_apps">More apps</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="uninstall">unstall</string>
    <string name="Recycle">Recycle bin</string>
    <string name="dialog_title">Memory Booster</string>
    <string name="used_mem">Used memory :</string>
    <string name="ignored_setting">setting</string>
    <string name="open_setting">settting</string>
    <string name="free_mem">Free Memory :</string>
    <string name="total_mem">Total Memory :</string>
    <string name="btn_boost">Boost</string>
    <string name="delete">Delete</string>
    <string name="titile_delete">Are you sure you want to delete this file? The file will be moved to the trash.</string>
    <string name="ok">OK</string>
    <string name="files_that_exist_in_the_recycle_bin_will_be_deleted_after_30_days">Files that exist in the recycle bin will be deleted after 30 days.</string>
    <string name="exit_attention">Are you sure you want to exit the app?</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="welcome_text">Wellcome Text\\</string>
    <string name="open_app_usage_setting">Setting</string>
    <string name="time_span">Timespan</string>
    <string name="toltal_space">Toltal Space</string>
    <string name="used">Used</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="document">Documents</string>
    <string name="image">Image</string>
    <string name="images">Images</string>
    <string name="imagess">Images</string>
    <string name="couldn_t_find_any_files">Couldn\'t find any files.</string>
    <string name="cleaner_master">Cleaner Master</string>
    <string name="downloads">Downloads</string>
    <string name="detail" >Detail</string>
    <string name="hide_titile_dialog_delete">The file will be hidden from the current directory.</string>
    <string name="delete_dialog_title">Do you want to delete this file? The file after deletion will be moved to the trash</string>
    <string name="delete_therefiles">Do you want to delete all these files?</string>
    <string name="delete_one_img">Are you sure you want to delete this photo? The photo after deletion will be moved to the trash.</string>
    <string name="delete_files">Are you sure you want to delete these photos? The photo after deletion will be moved to the trash.</string>
    <string name="restore_im">Restore</string>
    <string name="delete_one_video">Do you want to restore this video?</string>
    <string name="delete_multil_video">Do you want to restore there videos?</string>
    <string name="titile_hide">Do you want to hide this photo?</string>
    <string name="hide">Hide</string>
    <string name="delete_video">Do you want delete this video? The video after deletion will be moved to the trash</string>
    <string name="delete_videos">Do you want delete there videos? There videos after deletion will be moved to the trash</string>
    <string name="exits_titile">Are you sure you want to exit?</string>
    <string name="agree">Agree</string>
    <string name="permision_titile_usage">You need to grant \'Usage data access\' on your device to use this function.</string>
    <string name="delete_audio_file">Do you want delete this audio? The audio after deletion will be moved to the trash.</string>
    <string name="delete_multil_files">Do you want delete there audios? The audio after deletion will be moved to the trash.</string>
    <string name="delete_permanely">There files you choose will be permanently deleted.</string>
    <string name="delete_one_file_permanerly">The file you choose will be permanently deleted.</string>
    <string name="tititle_restore">Do you want restore this image?</string>
    <string name="titile_restore_imgs">Do you want restore there images?</string>
    <string name="trust_this_app">Do you want to trust this app</string>
    <string name="titile_retrict">Your android version Restrict access from external apps. Your actions will be performed with the system\'s handler.</string>
    <string name="hide_title_atention">can\'t add hidden item to favorites</string>
    <string name="remove_from_fv">removed from favorites</string>
    <string name="file_already_in_recycle">File already exists in the trash</string>
    <string name="usethispictrueforwallpaper">Use this picture as wallpaper</string>
    <string name="setted">Setted</string>
    <string name="edit_delete_photo">Do you want to delete this photo? The photo will be moved to the trash.</string>
    <string name="atention_delemiultil">You need to select at least one file before deleting</string>
    <string name="no_file_have_select">No files have been selected yet</string>
    <string name="no_image_found">No images found!</string>
    <string name="no_video_found">No videos found!</string>
    <string name="sd_card">SD Card</string>
    <string name="apks">APKS</string>
    <string name="Application">Application</string>
    <string name="zipped">Zipped</string>
    <string name="recycle">Recycle</string>
    <string name="dowdnloads">Downloads</string>
    <string name="instorage">Internal Storage</string>
    <string name="newfolder">New Folder</string>
    <string name="txtslide1">Simplify your filling system</string>
    <string name="txtthinslide1">My File Manager is a free, secure tool that helps you find file faster, manage files easily</string>
    <string name="txtslide2">Many attractive features</string>
    <string name="txtthinslide2">With My File Manager, clean master, hide photo and video, sharing files and more</string>
    <string name="txtslide3">Permit usage access</string>
    <string name="txtthinslide3">Allow My File Manager access to your files so My File Manager can help you</string>
    <string name="paste_tiitle">Something went wrong on your android version, please try again later.</string>
    <string name="restore">Restored</string>
    <string name="files_has_been_hide">File has been hidden</string>
    <string name="incorect_password">Incorrect password</string>
    <string name="exactly">exactly!</string>
    <string name="invalid_password">Invalid password</string>
    <string name="choose_missing">You choose missing</string>
    <string name="complete_survey">You need to complete this section</string>
    <string name="navigation_drawer_open">Navigation Open</string>
    <string name="navigation_drawer_close">Navigation Close</string>
    <string name="vote">vote</string>
    <string name="gplay_vote">gplay_vote</string>
    <string name="warning">warning</string>
    <string name="igonred_message_dialog">hfhfh</string>
    <string name="information">infomation</string>
    <string name="no_inet_no_app">no ineet no app</string>
    <string name="quit_app">processed</string>
    <string name="dialog_message_exit">Are you sure exit?</string>
    <string name="usb_title">Usb</string>
    <string name="system_app_usb_menace_title">app usb</string>
    <string name="usb_add_whitelist_message">usb add </string>
    <string name="usb_remove_whitelist_message">usb remove</string>
    <string name="remove_ignored_app_message">remove</string>
    <string name="ignored_counter">ignored_counter</string>
    <string name="high_risk">Privacy Risk</string>
    <string name="medium_risk">Vulnerable App</string>
    <string name="last_scanned">Last scan: #1</string>
    <string name="never">never</string>
    <string name="run_first_analysis">Run first analysis to check threats</string>
    <string name="are_protected">You are protected</string>
    <string name="menaces_unresolved">#1 Problems</string>
    <string name="trusted_message">trusted mess</string>
    <string name="trusted_by_app">trudted by</string>
    <string name="has_been_scanned">has been scanned</string>
    <string name="enter_to_solve_problems">enter to solove problems</string>
    <string name="is_secure">is secure</string>
    <string name="has_no_threats">has no thead</string>
    <string name="applications_header_text">Applications</string>
    <string name="system_header_text">System</string>
    <string name="threats_found">#1 Problems found</string>
    <string name="unknownApp_message">unKnow</string>
    <string name="system_app_unknown_app_menace_title">System_uknow</string>
    <string name="unknownApp_add_whitelist_message">unknowApp</string>
    <string name="unknownApp_remove_whitelist_message">Unknow_removeapp</string>
    <string name="title_installedGPlay">Unknown sources</string>
    <string name="read_phone_message">This app collects and sends SIM card details, including address book, mobile PIN, and call history. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="access_fine_message">This application can access its exact position and is a risk for your privacy.</string>
    <string name="read_sms_message">This application can read your private SMS and is a risk for your privacy.</string>
    <string name="write_sms_message">This application can write SMS. This can add charges to data plan and is a MEDIUM privacy risk.</string>
    <string name="send_sms_message">This application can send SMS. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="read_history_message">This application can read your history bookmarks and is a risk for your privacy.</string>
    <string name="write_history_message">This application can write your history bookmarks and is a risk for your privacy.</string>
    <string name="call_phone_message">This app can initiate a phone call without going through the Dialer user interface for the user to confirm the call. This can add charges to data plan and is a HIGH privacy risk.</string>
</resources>