<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#ff790b"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_text" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/_12ssp"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/eula_text" />

    <Button
        android:textSize="@dimen/_12ssp"
        android:textColor="#ffffff"
        android:id="@+id/accept_eula_button"
        android:background="@drawable/iconrocket"
        android:visibility="gone"
        android:layout_width="@dimen/_12ssp"
        android:layout_height="@dimen/_12ssp"
        android:text="@string/accept_eula" />

    <Button
        android:textSize="@dimen/_12ssp"
        android:textColor="#ffffff"
        android:id="@+id/decline_eula_button"
        android:background="@drawable/iconrocket"
        android:visibility="gone"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="20dp"
        android:text="text" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/_12ssp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Phong" />
</LinearLayout>
